force-app/main/default/objects/Sales_Order_Line__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Applied discount</description>
    <label>Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>